Some spelling mistakes corrected.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ title: Home
                     Innovation, Technology Transfer, Research and Development, Lab, Commercial Production, 3D
                     Bioprinting, Additive Manufacturing, Reducing Manufacturing Cost, Remanufacturing, Reverse
                     Engineering, Collaborations, Partners, Ethical Work Place, Deep Tech, Automation & Electrification,
+                    Renewable Energy Wind and Solar Power Utilities Scale to Distributed Energy Resources,
                     E-mobility, Data Driven, OEM, Global Supply Chain Management, Transparency are our key areas of
                     interest, No conflict of interest.
                   </p>
@@ -124,10 +125,12 @@ title: Home
           <div class="line-dec"></div>
           <div>
             <br />
-            We are a Startup based out of Visakhapatnam India Working in sustainable multidisciplinary verticals Such as
-            Health Care Point of Care Therapeutic Applications, Automotive, Clean Energy, 2D & 3D Advanced
-            Materials(Graphene, CNT, Mxenes), Bio Materials, Nano Materials, MEMS, Semiconductors, Circular Economy,
-            Energy Storage, Renewable Energy, Carbon Capture Storage, Hydrogen Fuel Cell Vehicles to reduce carbon foot
+            We are a Startup based out of Visakhapatnam India Working in Sustainable Multidisciplinary verticals such as
+            Health Care Point of Care Therapeutic & Theranostics Applications, Automotive, Clean Energy, 2D & 3D
+            Advanced
+            Materials(Graphene, CNT, Mxenes), Bio Materials, Bio Electronics, Nano Materials, MEMS, Semiconductors,
+            Circular Economy,
+            Energy Storage, Carbon Capture Storage, Hydrogen Fuel Cell Vehicles to reduce carbon foot
             print for Existing internal combustion engine vehicles creating a viable eco system.
           </div>
         </div>
@@ -194,7 +197,7 @@ title: Home
                                 Universal Health Care our vision is to create a Sustainable System Zero Preventable
                                 Deaths with
                                 timely molecular and cellular Patient Data.
-                                Our Mission is to revolutionise healthcare with Continuous Molecular and Cellular
+                                Our Mission is to revolutionize healthcare with Continuous Molecular and Cellular
                                 Monitoring.
                                 In a healthcare setting, our patient molecular and cellular monitoring solution will
                                 deliver earlier,
@@ -208,7 +211,7 @@ title: Home
                                 diagnostics and treatment progress
                                 E-health devices, Biosensors, Microfluidics, Organ-on-chip, Lab-on-a-chip, Drug
                                 Delivery, Drug Discovery,
-                                Biotech and Biomedical scientific services, Stem Cell Engineering, Tissue Enginnering,
+                                Biotech and Biomedical scientific services, Stem Cell Engineering, Tissue Engineering,
                                 Regenerative medicine,
                                 Healing Patients through Holistic Approach.
                               </p>
@@ -261,17 +264,17 @@ title: Home
                           <div class="col-lg-6 align-self-center">
                             <div class="left-text">
                               <h4>Solving Energy Efficiency</h4>
+                              <b>Energy as a Commodity</b>
                               <br>
-                              Energy as a Commodity
                               <br>
                               <p>
-                                Major issue due to improper Power Crisis major daily operations are getting intrepet. We
+                                Major issue due to improper Power Crisis major daily operations are getting interpret. We
                                 are Designing and Building Domestic Grids across all over India.
-                                Renewable Energy Storage for Hospitals, Agricuture Farmers, Rural, Urban, Villages,
+                                Renewable Energy Storage for Hospitals, Agriculture Farmers, Rural, Urban, Villages,
                                 Administrative offices, Schools, Colleges, Universities, Industries, Public
                                 Transportation, Railways.
-                                Energy Storage Applications: Hydrogen fuel Cell for automotive, Aluminium Graphene Ion,
-                                Sodium Ion, Iron Air Batteries, Supercapacitors using clean, Green and Renewable Energy.
+                                Energy Storage Applications: Hydrogen fuel Cell for Automotive, Aluminium Graphene Ion,
+                                Sodium Ion, Iron Air Batteries, Supercapacitor using Clean, Green and Renewable Energy.
                               </p>
                             </div>
                           </div>
@@ -295,12 +298,13 @@ title: Home
                                 Graphene is being used today on a commercial scale to improve and add value to an
                                 impressive range of products and applications.
                               </b>
+                              <br><br>
                               <p>
                                 Transportation-Road, Rail and Aerospace,
                                 Chemicals, Plastics and Composites Building Materials, Concrete and Cement, Energy
-                                Storage, desalination,
+                                Storage, Desalination,
                                 Graphene Electronics, Sensors and Devices, Consumer Goods, Coatings and Films,
-                                hygiene and healthcare, Medical science, Drug delivery, Biomedical applications,
+                                Hygiene and Healthcare, Medical science, Drug delivery, Biomedical applications,
                                 Graphene medical devices,
                                 Graphene in batteries and supercapacitors, wearable technology, Graphene transistors and
                                 Semiconductors, Graphene as a lubricant.
