COE  page added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Home
                 </div>
                 <div class="col-lg-12">
                   <div class="border-first-button scroll-to-section">
-                    <a href="mailto:venu@neolithicsystem.com">COE in Advanced Materials</a>
+                    <a href="./coe.html">COE in Advanced Materials</a>
                   </div>
                 </div>
               </div>
